--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+old_templates_ignore/
+scraps/
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
